--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>BestApp</h1>
     <h2>DA BEST APP EVA!</h2>
-    <script   src="http://code.jquery.com/jquery-3.0.0.js"  integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo="   crossorigin="anonymous"></script>
+    <script src="src/jquery-2.0.0.min.js"></script>
 </body>
 </html>
