--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>BestApp</h1>
     <h2>DA BEST APP EVA!</h2>
     <script src="src/js/jquery-3.0.0.min.js"></script>
+    <p>hello, it's me!</p>
 </body>
 </html>
