Adds code climate badge

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h2>DA BEST APP EVA!</h2>
     <script src="src/js/jquery-3.0.0.min.js"></script>
     <p>hello, it's me!</p>
+
+    <footer>
+        <a href="https://codeclimate.com/github/BestDesigners/BestApp"><img src="https://codeclimate.com/github/BestDesigners/BestApp/badges/issue_count.svg" /></a>
+    </footer>
 </body>
 </html>
