Adds deploybot badge

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>hello, it's me!</p>
 
     <footer>
+        <a href="http://deploybot.com"><img src="https://denniscalazans.deploybot.com/badge/88313866119889/78029.svg" alt="Deployment status from DeployBot"></a>
         <a href="https://codeclimate.com/github/BestDesigners/BestApp"><img src="https://codeclimate.com/github/BestDesigners/BestApp/badges/issue_count.svg" /></a>
     </footer>
 </body>
