--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>DA BEST APP EVA!</h2>
     <script src="src/js/jquery-3.0.0.min.js"></script>
     <p>hello, it's me!</p>
-
+	<p>Só custa $ 15!</p>
     <footer>
         <a href="http://deploybot.com"><img src="https://denniscalazans.deploybot.com/badge/88313866119889/78029.svg" alt="Deployment status from DeployBot"></a>
         <a href="https://codeclimate.com/github/BestDesigners/BestApp"><img src="https://codeclimate.com/github/BestDesigners/BestApp/badges/issue_count.svg" /></a>
