Adiciona o bootstrap ao arquivo index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>BestApp</title>
+    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div class="container">
+
     <h1>BestApp</h1>
     <h2>DA BEST APP EVA!</h2>
     <script src="src/js/jquery-3.0.0.min.js"></script>
@@ -14,5 +17,7 @@
         <a href="http://deploybot.com"><img src="https://denniscalazans.deploybot.com/badge/88313866119889/78029.svg" alt="Deployment status from DeployBot"></a>
         <a href="https://codeclimate.com/github/BestDesigners/BestApp"><img src="https://codeclimate.com/github/BestDesigners/BestApp/badges/issue_count.svg" /></a>
     </footer>
+
+</div>
 </body>
 </html>
