Cria seção de Local Storage

--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
 <body>
 <div class="container">
 
-    <h1>BestApp</h1>
-    <h2>DA BEST APP EVA!</h2>
-    <script src="src/js/jquery-3.0.0.min.js"></script>
-    <p>hello, it's me!</p>
-	<p>Só custa $ 15!</p>
+    <header>
+        <h1>Best APP</h1>
+
+        <nav>
+            <h2>Menu</h2>
+            <ul>
+                <li><a href="#localstorage">Local Storage</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main role="main">
+        <section id="localStorage">
+            <h2>Local Storage</h2>
+        </section>
+    </main>
+
     <footer>
         <a href="http://deploybot.com"><img src="https://denniscalazans.deploybot.com/badge/88313866119889/78029.svg" alt="Deployment status from DeployBot"></a>
         <a href="https://codeclimate.com/github/BestDesigners/BestApp"><img src="https://codeclimate.com/github/BestDesigners/BestApp/badges/issue_count.svg" /></a>
     </footer>
-
+    <script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 </div>
 </body>
 </html>
