Adiciona 1 ao contador

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
     <main role="main">
         <section id="localStorage">
-            <h2>Local Storage</h2>
+            <div class="jumbotron">
+              <h1><span class="contador">0</span></h1>
+              <p>Contador</p>
+              <p><a class="btn btn-primary btn-lg" href="#" role="button">+1</a></p>
+            </div>
         </section>
     </main>
 
@@ -31,6 +35,8 @@
     </footer>
     <script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="src/secao.localStorage.js" charset="utf-8"></script>
+
 </div>
 </body>
 </html>
