--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main role="main">
         <section id="localStorage">
             <div class="jumbotron">
-              <h1><span class="contador">0</span></h1>
+              <h1><span class="contador">-</span></h1>
               <p>Contador</p>
               <p><a class="btn btn-primary btn-lg" href="#" role="button">+1</a></p>
             </div>
