Adicionar botão limpar ao contador

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <h1><span class="contador">-</span></h1>
               <p>Contador</p>
               <p><a class="btn btn-primary btn-lg" href="#" role="button">+1</a></p>
+              <p><a class="btn btn-danger btn-lg" href="#" role="button">limpar</a></p>
             </div>
         </section>
     </main>
