Adicionando script de sessionStorage

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
               <p><a class="btn btn-danger btn-lg" href="#" role="button">limpar</a></p>
             </div>
         </section>
+        <section id="onlineStatus">
+            <h1><span class="status">-</span> <small><span class="quedas">-</span> quedas</small></h1>
+        </section>
     </main>
 
     <footer>
@@ -37,7 +40,7 @@
     <script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="src/secao.localStorage.js" charset="utf-8"></script>
-
+    <script src="src/secao.sessionStorage.js" charset="utf-8"></script>
 </div>
 </body>
 </html>
