Changes anchor buttons to button tag

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="jumbotron">
                     <h1><span class="contador">-</span></h1>
                     <p>Contador</p>
-                    <p><a class="btn btn-primary btn-lg" href="#" role="button">+1</a></p>
-                    <p><a class="btn btn-danger btn-lg" href="#" role="button">limpar</a></p>
+                    <p><button class="btn btn-primary btn-lg" href="#" role="button">+1</button></p>
+                    <p><button class="btn btn-danger btn-lg" href="#" role="button">limpar</button></p>
                 </div>
             </section>
         </main>
